<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="schedule_term">Term</string>
    <string name="schedule_term_with_data">Term %1$s</string>
    <string name="schedule_first_term">first</string>
    <string name="schedule_second_term">second</string>
    <string name="schedule_start_time">Start time</string>
    <string name="schedule_end_time">End time</string>
    <string name="schedule_type">Type</string>
    <string name="schedule_once">Once</string>
    <string name="schedule_weekly">Weekly</string>
    <string name="schedule_every_two_weeks">Every two weeks</string>
    <string name="schedule_event_name_label">Event name</string>
    <string name="schedule_date">Date</string>
    <string name="schedule_day">Day</string>
    <string name="schedule_event_deleted">Event deleted</string>
    <string name="schedule_event_form_title">Add event</string>
    <string name="schedule_event_form_edit_title">Edit event</string>
    <string name="schedule_class_date">Class date</string>
    <string name="schedule_event_date">Event date</string>
    <string name="schedule_add_event_date">Add event</string>
    <string name="schedule_edit_event_date">Edit event</string>
    <string name="schedule_pick_lesson">Select subject</string>
    <string name="schedule_lesson_not_selected">Subject not selected!</string>
    <string name="schedule_lesson">Subject</string>
    <string name="schedule_no_lesson_exists">Subject does not exist yet. There must be a subject to create a schedule.</string>
    <string name="schedule_schedule_empty">Empty schedule</string>
    <string name="schedule_event">Event</string>
    <string name="schedule_is_cancelled">Cancelled?</string>
    <string name="schedule_event_cancelled">Cancelled</string>
</resources>