<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ui_navigate_back">Go to previous screen</string>
    <string name="ui_add">Add</string>
    <string name="ui_edit">Edit</string>
    <string name="ui_warning">Warning</string>
    <string name="ui_delete">Delete</string>
    <string name="ui_schedule">Schedule</string>
    <string name="ui_school_classes">School classes</string>
    <string name="ui_notes">Notes</string>
    <string name="ui_settings">Settings</string>
    <string name="ui_loading">Loading…</string>
    <string name="ui_saving">Saving…</string>
    <string name="ui_form_error">An unexpected error occurred while saving</string>
    <string name="ui_unexpected_error">An unexpected error occurred</string>
    <string name="ui_data_deleted">Deleted data</string>
    <string name="ui_required">Required*</string>
    <string name="ui_ok">OK</string>
    <string name="ui_cancel">Cancel</string>
    <string name="ui_minus">Subtract</string>
    <string name="ui_plus">Add</string>
    <string name="ui_subject">Subject</string>
    <string name="ui_navigate_before">Navigate before</string>
    <string name="ui_navigate_next">Navigate next</string>
    <string name="ui_person">Person</string>
    <string name="ui_group_of_people">People</string>
    <string name="ui_register_book">Register book</string>
    <string name="ui_content_copy">Copy content</string>
    <string name="ui_phone">Phone</string>
    <string name="ui_email">Email</string>
    <string name="ui_details">Details</string>
    <string name="ui_grades">Grades</string>
    <string name="ui_attendance">Attendance</string>
    <string name="ui_activity">Activity</string>
    <string name="ui_info">Information</string>
    <string name="ui_date">Date</string>
    <string name="ui_day_pick">Day</string>
    <string name="ui_time">Time</string>

    <string name="ui_discard_title">Discard data</string>
    <string name="ui_discard_message">The form will be rejected and will not be saved.</string>
    <string name="ui_discard">Discard</string>

    <string name="ui_remove_title">Delete data</string>
    <string name="ui_remove_message">The data will be deleted and cannot be restored</string>
    <string name="ui_remove">Delete</string>

    <string name="ui_very_long_text" translatable="false">Very very very very very very very very long supportive text</string>
    <string name="ui_supportive_text" translatable="false">Supportive Text</string>
    <string name="ui_tab_1" translatable="false">Data</string>
    <string name="ui_tab_2" translatable="false">Grades</string>
    <string name="ui_tab_3" translatable="false">Notes</string>
</resources>