<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="student_details">Details</string>
    <string name="student_grades">Grades</string>
    <string name="student_notes">Notes</string>
    <string name="student_saving_student">Saving student…</string>
    <string name="student_deleted">Student deleted</string>
    <string name="student_school_class_name">Class %1$s</string>
    <string name="add_student">Add student</string>
    <string name="edit_student">Edit student</string>
    <string name="student_name">Name</string>
    <string name="student_surname">Surname</string>
    <string name="student_register_number">Register number</string>
    <string name="student_email">Email</string>
    <string name="student_phone">Phone</string>
    <string name="ok">OK</string>
    <string name="student_grade_average">Average: %1$s</string>
    <string name="student_empty_grades">Student has no grades</string>
    <string name="student_empty_notes">Student has no notes</string>
    <string name="student_email_supporting_text">Email cannot be blank</string>
    <string name="student_phone_supporting_text">Phone must contain 9 digits (can be blank)</string>
    <string name="student_register_number_supporting_text">Register number must be a number (can be blank)</string>
    <string name="student_register_number_supporting_text_error">Other student already has this register number (old register number will be overridden)</string>
    <string name="student_no_grades">No grades</string>
    <string name="student_empty_grade">NA</string>
    <string name="student_empty_average">NA</string>
    <string name="student_weight_with_data">Weight %1$s</string>
    <string name="student_grade">Grade %1$s</string>
    <string name="student_term">Term %1$s</string>
    <string name="student_send_email">Send email</string>
    <string name="student_phone_call">Call</string>
    <string name="student_student">Student</string>
    <string name="student_notes_neutral">Notes</string>
    <string name="student_notes_negative">Negative Notes</string>
    <string name="student_register_number_with_data">Register number: %1$s</string>
</resources>